--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "mongodb": "4.1"
+    "mongodb": "4.1",
+    "nodemon": "^3.1.9"
   }
 }
