--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "mongodb": "4.1",
     "nodemon": "^3.1.9"
   }
