--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "4.1",
+    "mongoose": "^8.9.5",
     "nodemon": "^3.1.9"
   }
 }
